Fix a re-bootstrapping issue.
This change fixes an issue where the re-bootstrapping process would overwrite a
newer bootstrap manifest with one that it generates using its older minibp.  It
fixes the issue by only generating a new bootstrap manifest right after
rebuilding minibp (as part of the bootstrap process).  It then uses an
additional rebootstrap iteration to replace the old bootstrap manifest with the
new one.

Change-Id: I16bad2f30f6ad7f10da07d77105e8745adec3650

--- a/build.ninja.in
+++ b/build.ninja.in
@@ -148,9 +148,19 @@ rule s.bootstrap.bigbp
     depfile = bootstrap/build.ninja.in.d
     description = minibp ${out}
 
+rule s.bootstrap.minibp
+    command = bootstrap/bin/minibp -c ${checkFile} -d ${out}.d -o ${out} ${in}
+    depfile = ${out}.d
+    description = minibp ${out}
+    generator = true
+
 build bootstrap/build.ninja.in: s.bootstrap.bigbp $
         ${g.bootstrap.SrcDir}/Blueprints | bootstrap/bin/minibp
 build bootstrap/notAFile: phony
 build build.ninja: g.bootstrap.bootstrap bootstrap/build.ninja.in | $
-        ${g.bootstrap.Bootstrap} bootstrap/notAFile bootstrap/bin/minibp
+        ${g.bootstrap.Bootstrap} bootstrap/notAFile $
+        bootstrap/bootstrap.ninja.in
+build bootstrap/bootstrap.ninja.in: s.bootstrap.minibp $
+        ${g.bootstrap.SrcDir}/Blueprints | bootstrap/bin/minibp
+    checkFile = ${g.bootstrap.BootstrapManifest}
 
