--- a/build.ninja.in
+++ b/build.ninja.in
@@ -31,7 +31,7 @@ g.bootstrap.linkCmd = ${g.bootstrap.goToolDir}/${g.bootstrap.GoChar}l
 
 g.bootstrap.packCmd = ${g.bootstrap.goToolDir}/pack
 
-builddir = bootstrap
+builddir = .bootstrap
 
 rule g.bootstrap.gc
     command = GOROOT='${g.bootstrap.GoRoot}' ${g.bootstrap.gcCmd} -o ${out} -p ${pkgPath} -complete ${incFlags} ${in}
@@ -60,7 +60,7 @@ rule g.bootstrap.bootstrap
 # GoType:  blueprint/bootstrap.goPackageModule
 # Defined: Blueprints:1:1
 
-build bootstrap/blueprint/obj/_go_.${g.bootstrap.GoChar}: g.bootstrap.gc $
+build .bootstrap/blueprint/obj/_go_.${g.bootstrap.GoChar}: g.bootstrap.gc $
         ${g.bootstrap.SrcDir}/blueprint/context.go $
         ${g.bootstrap.SrcDir}/blueprint/globals.go $
         ${g.bootstrap.SrcDir}/blueprint/live_tracker.go $
@@ -72,13 +72,13 @@ build bootstrap/blueprint/obj/_go_.${g.bootstrap.GoChar}: g.bootstrap.gc $
         ${g.bootstrap.SrcDir}/blueprint/scope.go $
         ${g.bootstrap.SrcDir}/blueprint/singleton_ctx.go $
         ${g.bootstrap.SrcDir}/blueprint/unpack.go | $
-        bootstrap/blueprint-parser/pkg/blueprint/parser.a
+        .bootstrap/blueprint-parser/pkg/blueprint/parser.a
     pkgPath = blueprint
-    incFlags = -I bootstrap/blueprint-parser/pkg
+    incFlags = -I .bootstrap/blueprint-parser/pkg
 
-build bootstrap/blueprint/pkg/blueprint.a: g.bootstrap.pack $
-        bootstrap/blueprint/obj/_go_.${g.bootstrap.GoChar}
-    prefix = bootstrap/blueprint/pkg
+build .bootstrap/blueprint/pkg/blueprint.a: g.bootstrap.pack $
+        .bootstrap/blueprint/obj/_go_.${g.bootstrap.GoChar}
+    prefix = .bootstrap/blueprint/pkg
 
 # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # #
 # Module:  blueprint-parser
@@ -86,13 +86,13 @@ build bootstrap/blueprint/pkg/blueprint.a: g.bootstrap.pack $
 # GoType:  blueprint/bootstrap.goPackageModule
 # Defined: Blueprints:18:1
 
-build bootstrap/blueprint-parser/obj/_go_.${g.bootstrap.GoChar}: $
+build .bootstrap/blueprint-parser/obj/_go_.${g.bootstrap.GoChar}: $
         g.bootstrap.gc ${g.bootstrap.SrcDir}/blueprint/parser/parser.go
     pkgPath = blueprint/parser
 
-build bootstrap/blueprint-parser/pkg/blueprint/parser.a: g.bootstrap.pack $
-        bootstrap/blueprint-parser/obj/_go_.${g.bootstrap.GoChar}
-    prefix = bootstrap/blueprint-parser/pkg
+build .bootstrap/blueprint-parser/pkg/blueprint/parser.a: g.bootstrap.pack $
+        .bootstrap/blueprint-parser/obj/_go_.${g.bootstrap.GoChar}
+    prefix = .bootstrap/blueprint-parser/pkg
 
 # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # #
 # Module:  blueprint-bootstrap
@@ -100,20 +100,20 @@ build bootstrap/blueprint-parser/pkg/blueprint/parser.a: g.bootstrap.pack $
 # GoType:  blueprint/bootstrap.goPackageModule
 # Defined: Blueprints:24:1
 
-build bootstrap/blueprint-bootstrap/obj/_go_.${g.bootstrap.GoChar}: $
+build .bootstrap/blueprint-bootstrap/obj/_go_.${g.bootstrap.GoChar}: $
         g.bootstrap.gc ${g.bootstrap.SrcDir}/blueprint/bootstrap/bootstrap.go $
         ${g.bootstrap.SrcDir}/blueprint/bootstrap/command.go $
         ${g.bootstrap.SrcDir}/blueprint/bootstrap/config.go $
         ${g.bootstrap.SrcDir}/blueprint/bootstrap/doc.go | $
-        bootstrap/blueprint-parser/pkg/blueprint/parser.a $
-        bootstrap/blueprint/pkg/blueprint.a
+        .bootstrap/blueprint-parser/pkg/blueprint/parser.a $
+        .bootstrap/blueprint/pkg/blueprint.a
     pkgPath = blueprint/bootstrap
-    incFlags = -I bootstrap/blueprint-parser/pkg -I bootstrap/blueprint/pkg
+    incFlags = -I .bootstrap/blueprint-parser/pkg -I .bootstrap/blueprint/pkg
 
-build bootstrap/blueprint-bootstrap/pkg/blueprint/bootstrap.a: $
+build .bootstrap/blueprint-bootstrap/pkg/blueprint/bootstrap.a: $
         g.bootstrap.pack $
-        bootstrap/blueprint-bootstrap/obj/_go_.${g.bootstrap.GoChar}
-    prefix = bootstrap/blueprint-bootstrap/pkg
+        .bootstrap/blueprint-bootstrap/obj/_go_.${g.bootstrap.GoChar}
+    prefix = .bootstrap/blueprint-bootstrap/pkg
 
 # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # #
 # Module:  minibp
@@ -121,46 +121,46 @@ build bootstrap/blueprint-bootstrap/pkg/blueprint/bootstrap.a: $
 # GoType:  blueprint/bootstrap.goBinaryModule
 # Defined: Blueprints:34:1
 
-build bootstrap/minibp/obj/_go_.${g.bootstrap.GoChar}: g.bootstrap.gc $
+build .bootstrap/minibp/obj/_go_.${g.bootstrap.GoChar}: g.bootstrap.gc $
         ${g.bootstrap.SrcDir}/blueprint/bootstrap/minibp/main.go | $
-        bootstrap/blueprint-parser/pkg/blueprint/parser.a $
-        bootstrap/blueprint/pkg/blueprint.a $
-        bootstrap/blueprint-bootstrap/pkg/blueprint/bootstrap.a
+        .bootstrap/blueprint-parser/pkg/blueprint/parser.a $
+        .bootstrap/blueprint/pkg/blueprint.a $
+        .bootstrap/blueprint-bootstrap/pkg/blueprint/bootstrap.a
     pkgPath = minibp
-    incFlags = -I bootstrap/blueprint-parser/pkg -I bootstrap/blueprint/pkg -I bootstrap/blueprint-bootstrap/pkg
+    incFlags = -I .bootstrap/blueprint-parser/pkg -I .bootstrap/blueprint/pkg -I .bootstrap/blueprint-bootstrap/pkg
 
-build bootstrap/minibp/obj/minibp.a: g.bootstrap.pack $
-        bootstrap/minibp/obj/_go_.${g.bootstrap.GoChar}
-    prefix = bootstrap/minibp/obj
+build .bootstrap/minibp/obj/minibp.a: g.bootstrap.pack $
+        .bootstrap/minibp/obj/_go_.${g.bootstrap.GoChar}
+    prefix = .bootstrap/minibp/obj
 
-build bootstrap/minibp/obj/a.out: g.bootstrap.link $
-        bootstrap/minibp/obj/minibp.a
-    libDirFlags = -L bootstrap/blueprint-parser/pkg -L bootstrap/blueprint/pkg -L bootstrap/blueprint-bootstrap/pkg
+build .bootstrap/minibp/obj/a.out: g.bootstrap.link $
+        .bootstrap/minibp/obj/minibp.a
+    libDirFlags = -L .bootstrap/blueprint-parser/pkg -L .bootstrap/blueprint/pkg -L .bootstrap/blueprint-bootstrap/pkg
 
-build bootstrap/bin/minibp: g.bootstrap.cp bootstrap/minibp/obj/a.out
+build .bootstrap/bin/minibp: g.bootstrap.cp .bootstrap/minibp/obj/a.out
 
 # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # #
 # Singleton: bootstrap
 # GoType:    blueprint/bootstrap.singleton
 
 rule s.bootstrap.bigbp
-    command = bootstrap/bin/minibp -p -d bootstrap/build.ninja.in.d -o ${out} ${in}
-    depfile = bootstrap/build.ninja.in.d
+    command = .bootstrap/bin/minibp -p -d .bootstrap/build.ninja.in.d -o ${out} ${in}
+    depfile = .bootstrap/build.ninja.in.d
     description = minibp ${out}
 
 rule s.bootstrap.minibp
-    command = bootstrap/bin/minibp -c ${checkFile} -d ${out}.d -o ${out} ${in}
+    command = .bootstrap/bin/minibp -c ${checkFile} -d ${out}.d -o ${out} ${in}
     depfile = ${out}.d
     description = minibp ${out}
     generator = true
 
-build bootstrap/build.ninja.in: s.bootstrap.bigbp $
-        ${g.bootstrap.SrcDir}/Blueprints | bootstrap/bin/minibp
-build bootstrap/notAFile: phony
-build build.ninja: g.bootstrap.bootstrap bootstrap/build.ninja.in | $
-        ${g.bootstrap.Bootstrap} bootstrap/notAFile $
-        bootstrap/bootstrap.ninja.in
-build bootstrap/bootstrap.ninja.in: s.bootstrap.minibp $
-        ${g.bootstrap.SrcDir}/Blueprints | bootstrap/bin/minibp
+build .bootstrap/build.ninja.in: s.bootstrap.bigbp $
+        ${g.bootstrap.SrcDir}/Blueprints | .bootstrap/bin/minibp
+build .bootstrap/notAFile: phony
+build build.ninja: g.bootstrap.bootstrap .bootstrap/build.ninja.in | $
+        ${g.bootstrap.Bootstrap} .bootstrap/notAFile $
+        .bootstrap/bootstrap.ninja.in
+build .bootstrap/bootstrap.ninja.in: s.bootstrap.minibp $
+        ${g.bootstrap.SrcDir}/Blueprints | .bootstrap/bin/minibp
     checkFile = ${g.bootstrap.BootstrapManifest}
 
