--- a/build.ninja.in
+++ b/build.ninja.in
@@ -95,10 +95,25 @@ build .bootstrap/blueprint-parser/pkg/blueprint/parser.a: g.bootstrap.pack $
     prefix = .bootstrap/blueprint-parser/pkg
 
 # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # #
-# Module:  blueprint-bootstrap
+# Module:  blueprint-pathtools
 # Type:    bootstrap_go_package
 # GoType:  blueprint/bootstrap.goPackageModule
 # Defined: Blueprints:24:1
+
+build .bootstrap/blueprint-pathtools/obj/_go_.${g.bootstrap.GoChar}: $
+        g.bootstrap.gc ${g.bootstrap.SrcDir}/blueprint/pathtools/lists.go
+    pkgPath = blueprint/pathtools
+
+build .bootstrap/blueprint-pathtools/pkg/blueprint/pathtools.a: $
+        g.bootstrap.pack $
+        .bootstrap/blueprint-pathtools/obj/_go_.${g.bootstrap.GoChar}
+    prefix = .bootstrap/blueprint-pathtools/pkg
+
+# # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # #
+# Module:  blueprint-bootstrap
+# Type:    bootstrap_go_package
+# GoType:  blueprint/bootstrap.goPackageModule
+# Defined: Blueprints:30:1
 
 build .bootstrap/blueprint-bootstrap/obj/_go_.${g.bootstrap.GoChar}: $
         g.bootstrap.gc ${g.bootstrap.SrcDir}/blueprint/bootstrap/bootstrap.go $
@@ -106,9 +121,10 @@ build .bootstrap/blueprint-bootstrap/obj/_go_.${g.bootstrap.GoChar}: $
         ${g.bootstrap.SrcDir}/blueprint/bootstrap/config.go $
         ${g.bootstrap.SrcDir}/blueprint/bootstrap/doc.go | $
         .bootstrap/blueprint-parser/pkg/blueprint/parser.a $
-        .bootstrap/blueprint/pkg/blueprint.a
+        .bootstrap/blueprint/pkg/blueprint.a $
+        .bootstrap/blueprint-pathtools/pkg/blueprint/pathtools.a
     pkgPath = blueprint/bootstrap
-    incFlags = -I .bootstrap/blueprint-parser/pkg -I .bootstrap/blueprint/pkg
+    incFlags = -I .bootstrap/blueprint-parser/pkg -I .bootstrap/blueprint/pkg -I .bootstrap/blueprint-pathtools/pkg
 
 build .bootstrap/blueprint-bootstrap/pkg/blueprint/bootstrap.a: $
         g.bootstrap.pack $
@@ -119,15 +135,16 @@ build .bootstrap/blueprint-bootstrap/pkg/blueprint/bootstrap.a: $
 # Module:  minibp
 # Type:    bootstrap_go_binary
 # GoType:  blueprint/bootstrap.goBinaryModule
-# Defined: Blueprints:34:1
+# Defined: Blueprints:41:1
 
 build .bootstrap/minibp/obj/_go_.${g.bootstrap.GoChar}: g.bootstrap.gc $
         ${g.bootstrap.SrcDir}/blueprint/bootstrap/minibp/main.go | $
         .bootstrap/blueprint-parser/pkg/blueprint/parser.a $
         .bootstrap/blueprint/pkg/blueprint.a $
+        .bootstrap/blueprint-pathtools/pkg/blueprint/pathtools.a $
         .bootstrap/blueprint-bootstrap/pkg/blueprint/bootstrap.a
     pkgPath = minibp
-    incFlags = -I .bootstrap/blueprint-parser/pkg -I .bootstrap/blueprint/pkg -I .bootstrap/blueprint-bootstrap/pkg
+    incFlags = -I .bootstrap/blueprint-parser/pkg -I .bootstrap/blueprint/pkg -I .bootstrap/blueprint-pathtools/pkg -I .bootstrap/blueprint-bootstrap/pkg
 
 build .bootstrap/minibp/obj/minibp.a: g.bootstrap.pack $
         .bootstrap/minibp/obj/_go_.${g.bootstrap.GoChar}
@@ -135,7 +152,7 @@ build .bootstrap/minibp/obj/minibp.a: g.bootstrap.pack $
 
 build .bootstrap/minibp/obj/a.out: g.bootstrap.link $
         .bootstrap/minibp/obj/minibp.a
-    libDirFlags = -L .bootstrap/blueprint-parser/pkg -L .bootstrap/blueprint/pkg -L .bootstrap/blueprint-bootstrap/pkg
+    libDirFlags = -L .bootstrap/blueprint-parser/pkg -L .bootstrap/blueprint/pkg -L .bootstrap/blueprint-pathtools/pkg -L .bootstrap/blueprint-bootstrap/pkg
 
 build .bootstrap/bin/minibp: g.bootstrap.cp .bootstrap/minibp/obj/a.out
 
