Document the bootstrap process.
This change adds a bunch of docs describing the bootstrap process.  It also
renames a couple things in the source to better correspond with the terminology
used in the docs.  On top of that it makes the standalone build to copy minibp
from the .bootstrap/bin directory to the bin directory to make it easier to
find.

Change-Id: Ibae3e607b59e2caf7d764ec3153155fde208ec1e

--- a/build.ninja.in
+++ b/build.ninja.in
@@ -161,8 +161,8 @@ build .bootstrap/bin/minibp: g.bootstrap.cp .bootstrap/minibp/obj/a.out
 # GoType:    blueprint/bootstrap.singleton
 
 rule s.bootstrap.bigbp
-    command = .bootstrap/bin/minibp -p -d .bootstrap/build.ninja.in.d -o ${out} ${in}
-    depfile = .bootstrap/build.ninja.in.d
+    command = .bootstrap/bin/minibp -p -d .bootstrap/main.ninja.in.d -o ${out} ${in}
+    depfile = .bootstrap/main.ninja.in.d
     description = minibp ${out}
 
 rule s.bootstrap.minibp
@@ -171,10 +171,10 @@ rule s.bootstrap.minibp
     description = minibp ${out}
     generator = true
 
-build .bootstrap/build.ninja.in: s.bootstrap.bigbp $
+build .bootstrap/main.ninja.in: s.bootstrap.bigbp $
         ${g.bootstrap.SrcDir}/Blueprints | .bootstrap/bin/minibp
 build .bootstrap/notAFile: phony
-build build.ninja: g.bootstrap.bootstrap .bootstrap/build.ninja.in | $
+build build.ninja: g.bootstrap.bootstrap .bootstrap/main.ninja.in | $
         ${g.bootstrap.Bootstrap} .bootstrap/notAFile $
         .bootstrap/bootstrap.ninja.in
 build .bootstrap/bootstrap.ninja.in: s.bootstrap.minibp $
