Clean up the bootstrap script a little.
This change makes the bootstrap script take two optional flag-based command
line arguments rather than using positional arguments.  The -i argument
replaces the old positional arguments (one of which was simply not needed), and
the -r flag now causes the script to regenerate the bootstrap Ninja file for
use when working on Blueprint itself.

Additionally this change allows all the configuration variables used in the
script to be overridden by environment variables.  This makes it possible to
create a very simple bootstrap script for a customized Blueprint-based build
system by invoking this script after setting up the proper environment
variables.

Change-Id: I60f890061ae237a68719e1e2d345d1a8e87c851c

--- a/build.ninja.in
+++ b/build.ninja.in
@@ -50,7 +50,7 @@ rule g.bootstrap.cp
     description = cp ${out}
 
 rule g.bootstrap.bootstrap
-    command = ${g.bootstrap.Bootstrap} ${in} ${g.bootstrap.BootstrapManifest}
+    command = ${g.bootstrap.Bootstrap} -i ${in}
     description = bootstrap ${in}
     generator = true
 
