--- a/build.ninja.in
+++ b/build.ninja.in
@@ -84,7 +84,7 @@ build .bootstrap/blueprint/pkg/blueprint.a: g.bootstrap.pack $
 # Module:  blueprint-bootstrap
 # Type:    bootstrap_go_package
 # Factory: blueprint/bootstrap.newGoPackageModule
-# Defined: Blueprints:30:1
+# Defined: Blueprints:36:1
 
 build .bootstrap/blueprint-bootstrap/obj/_go_.${g.bootstrap.GoChar}: $
         g.bootstrap.gc ${g.bootstrap.SrcDir}/blueprint/bootstrap/bootstrap.go $
@@ -132,10 +132,25 @@ build .bootstrap/blueprint-pathtools/pkg/blueprint/pathtools.a: $
     prefix = .bootstrap/blueprint-pathtools/pkg
 
 # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # #
+# Module:  blueprint-proptools
+# Type:    bootstrap_go_package
+# Factory: blueprint/bootstrap.newGoPackageModule
+# Defined: Blueprints:30:1
+
+build .bootstrap/blueprint-proptools/obj/_go_.${g.bootstrap.GoChar}: $
+        g.bootstrap.gc ${g.bootstrap.SrcDir}/blueprint/proptools/proptools.go
+    pkgPath = blueprint/proptools
+
+build .bootstrap/blueprint-proptools/pkg/blueprint/proptools.a: $
+        g.bootstrap.pack $
+        .bootstrap/blueprint-proptools/obj/_go_.${g.bootstrap.GoChar}
+    prefix = .bootstrap/blueprint-proptools/pkg
+
+# # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # #
 # Module:  minibp
 # Type:    bootstrap_go_binary
 # Factory: blueprint/bootstrap.newGoBinaryModule
-# Defined: Blueprints:41:1
+# Defined: Blueprints:47:1
 
 build .bootstrap/minibp/obj/_go_.${g.bootstrap.GoChar}: g.bootstrap.gc $
         ${g.bootstrap.SrcDir}/blueprint/bootstrap/minibp/main.go | $
