--- a/build.ninja.in
+++ b/build.ninja.in
@@ -9,30 +9,30 @@
 #
 ninja_required_version = 1.1.0
 
-g.bootstrap.Bootstrap = @@Bootstrap@@
+g.bootstrap.bootstrapCmd = @@Bootstrap@@
 
-g.bootstrap.BootstrapManifest = @@BootstrapManifest@@
+g.bootstrap.bootstrapManifest = @@BootstrapManifest@@
 
-g.bootstrap.GoArch = @@GoArch@@
+g.bootstrap.goRoot = @@GoRoot@@
 
-g.bootstrap.GoChar = @@GoChar@@
+g.bootstrap.goOS = @@GoOS@@
 
-g.bootstrap.GoOS = @@GoOS@@
+g.bootstrap.goArch = @@GoArch@@
 
-g.bootstrap.GoRoot = @@GoRoot@@
+g.bootstrap.goToolDir = ${g.bootstrap.goRoot}/pkg/tool/${g.bootstrap.goOS}_${g.bootstrap.goArch}
 
-g.bootstrap.SrcDir = @@SrcDir@@
+g.bootstrap.goChar = @@GoChar@@
 
-g.bootstrap.goToolDir = ${g.bootstrap.GoRoot}/pkg/tool/${g.bootstrap.GoOS}_${g.bootstrap.GoArch}
+g.bootstrap.gcCmd = ${g.bootstrap.goToolDir}/${g.bootstrap.goChar}g
 
-g.bootstrap.gcCmd = ${g.bootstrap.goToolDir}/${g.bootstrap.GoChar}g
+g.bootstrap.linkCmd = ${g.bootstrap.goToolDir}/${g.bootstrap.goChar}l
 
-g.bootstrap.linkCmd = ${g.bootstrap.goToolDir}/${g.bootstrap.GoChar}l
+g.bootstrap.srcDir = @@SrcDir@@
 
 builddir = .bootstrap
 
 rule g.bootstrap.bootstrap
-    command = ${g.bootstrap.Bootstrap} -i ${in}
+    command = ${g.bootstrap.bootstrapCmd} -i ${in}
     description = bootstrap ${in}
     generator = true
 
@@ -41,12 +41,12 @@ rule g.bootstrap.cp
     description = cp ${out}
 
 rule g.bootstrap.gc
-    command = GOROOT='${g.bootstrap.GoRoot}' ${g.bootstrap.gcCmd} -o ${out} -p ${pkgPath} -complete ${incFlags} -pack ${in}
-    description = ${g.bootstrap.GoChar}g ${out}
+    command = GOROOT='${g.bootstrap.goRoot}' ${g.bootstrap.gcCmd} -o ${out} -p ${pkgPath} -complete ${incFlags} -pack ${in}
+    description = ${g.bootstrap.goChar}g ${out}
 
 rule g.bootstrap.link
-    command = GOROOT='${g.bootstrap.GoRoot}' ${g.bootstrap.linkCmd} -o ${out} ${libDirFlags} ${in}
-    description = ${g.bootstrap.GoChar}l ${out}
+    command = GOROOT='${g.bootstrap.goRoot}' ${g.bootstrap.linkCmd} -o ${out} ${libDirFlags} ${in}
+    description = ${g.bootstrap.goChar}l ${out}
 
 # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # #
 # Module:  blueprint
@@ -55,21 +55,22 @@ rule g.bootstrap.link
 # Defined: Blueprints:1:1
 
 build .bootstrap/blueprint/pkg/blueprint.a: g.bootstrap.gc $
-        ${g.bootstrap.SrcDir}/blueprint/context.go $
-        ${g.bootstrap.SrcDir}/blueprint/live_tracker.go $
-        ${g.bootstrap.SrcDir}/blueprint/mangle.go $
-        ${g.bootstrap.SrcDir}/blueprint/module_ctx.go $
-        ${g.bootstrap.SrcDir}/blueprint/ninja_defs.go $
-        ${g.bootstrap.SrcDir}/blueprint/ninja_strings.go $
-        ${g.bootstrap.SrcDir}/blueprint/ninja_writer.go $
-        ${g.bootstrap.SrcDir}/blueprint/package_ctx.go $
-        ${g.bootstrap.SrcDir}/blueprint/scope.go $
-        ${g.bootstrap.SrcDir}/blueprint/singleton_ctx.go $
-        ${g.bootstrap.SrcDir}/blueprint/unpack.go | ${g.bootstrap.gcCmd} $
+        ${g.bootstrap.srcDir}/blueprint/context.go $
+        ${g.bootstrap.srcDir}/blueprint/live_tracker.go $
+        ${g.bootstrap.srcDir}/blueprint/mangle.go $
+        ${g.bootstrap.srcDir}/blueprint/module_ctx.go $
+        ${g.bootstrap.srcDir}/blueprint/ninja_defs.go $
+        ${g.bootstrap.srcDir}/blueprint/ninja_strings.go $
+        ${g.bootstrap.srcDir}/blueprint/ninja_writer.go $
+        ${g.bootstrap.srcDir}/blueprint/package_ctx.go $
+        ${g.bootstrap.srcDir}/blueprint/scope.go $
+        ${g.bootstrap.srcDir}/blueprint/singleton_ctx.go $
+        ${g.bootstrap.srcDir}/blueprint/unpack.go | ${g.bootstrap.gcCmd} $
         .bootstrap/blueprint-parser/pkg/blueprint/parser.a $
         .bootstrap/blueprint-proptools/pkg/blueprint/proptools.a
     incFlags = -I .bootstrap/blueprint-parser/pkg -I .bootstrap/blueprint-proptools/pkg
     pkgPath = blueprint
+default .bootstrap/blueprint/pkg/blueprint.a
 
 # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # #
 # Module:  blueprint-bootstrap
@@ -78,11 +79,11 @@ build .bootstrap/blueprint/pkg/blueprint.a: g.bootstrap.gc $
 # Defined: Blueprints:44:1
 
 build .bootstrap/blueprint-bootstrap/pkg/blueprint/bootstrap.a: g.bootstrap.gc $
-        ${g.bootstrap.SrcDir}/blueprint/bootstrap/bootstrap.go $
-        ${g.bootstrap.SrcDir}/blueprint/bootstrap/cleanup.go $
-        ${g.bootstrap.SrcDir}/blueprint/bootstrap/command.go $
-        ${g.bootstrap.SrcDir}/blueprint/bootstrap/config.go $
-        ${g.bootstrap.SrcDir}/blueprint/bootstrap/doc.go | $
+        ${g.bootstrap.srcDir}/blueprint/bootstrap/bootstrap.go $
+        ${g.bootstrap.srcDir}/blueprint/bootstrap/cleanup.go $
+        ${g.bootstrap.srcDir}/blueprint/bootstrap/command.go $
+        ${g.bootstrap.srcDir}/blueprint/bootstrap/config.go $
+        ${g.bootstrap.srcDir}/blueprint/bootstrap/doc.go | $
         ${g.bootstrap.gcCmd} $
         .bootstrap/blueprint-parser/pkg/blueprint/parser.a $
         .bootstrap/blueprint-proptools/pkg/blueprint/proptools.a $
@@ -91,6 +92,7 @@ build .bootstrap/blueprint-bootstrap/pkg/blueprint/bootstrap.a: g.bootstrap.gc $
         .bootstrap/blueprint-pathtools/pkg/blueprint/pathtools.a
     incFlags = -I .bootstrap/blueprint-parser/pkg -I .bootstrap/blueprint-proptools/pkg -I .bootstrap/blueprint/pkg -I .bootstrap/blueprint-deptools/pkg -I .bootstrap/blueprint-pathtools/pkg
     pkgPath = blueprint/bootstrap
+default .bootstrap/blueprint-bootstrap/pkg/blueprint/bootstrap.a
 
 # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # #
 # Module:  blueprint-deptools
@@ -99,9 +101,10 @@ build .bootstrap/blueprint-bootstrap/pkg/blueprint/bootstrap.a: g.bootstrap.gc $
 # Defined: Blueprints:25:1
 
 build .bootstrap/blueprint-deptools/pkg/blueprint/deptools.a: g.bootstrap.gc $
-        ${g.bootstrap.SrcDir}/blueprint/deptools/depfile.go | $
+        ${g.bootstrap.srcDir}/blueprint/deptools/depfile.go | $
         ${g.bootstrap.gcCmd}
     pkgPath = blueprint/deptools
+default .bootstrap/blueprint-deptools/pkg/blueprint/deptools.a
 
 # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # #
 # Module:  blueprint-parser
@@ -110,9 +113,10 @@ build .bootstrap/blueprint-deptools/pkg/blueprint/deptools.a: g.bootstrap.gc $
 # Defined: Blueprints:19:1
 
 build .bootstrap/blueprint-parser/pkg/blueprint/parser.a: g.bootstrap.gc $
-        ${g.bootstrap.SrcDir}/blueprint/parser/parser.go | $
+        ${g.bootstrap.srcDir}/blueprint/parser/parser.go | $
         ${g.bootstrap.gcCmd}
     pkgPath = blueprint/parser
+default .bootstrap/blueprint-parser/pkg/blueprint/parser.a
 
 # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # #
 # Module:  blueprint-pathtools
@@ -121,10 +125,11 @@ build .bootstrap/blueprint-parser/pkg/blueprint/parser.a: g.bootstrap.gc $
 # Defined: Blueprints:31:1
 
 build .bootstrap/blueprint-pathtools/pkg/blueprint/pathtools.a: g.bootstrap.gc $
-        ${g.bootstrap.SrcDir}/blueprint/pathtools/lists.go $
-        ${g.bootstrap.SrcDir}/blueprint/pathtools/glob.go | $
+        ${g.bootstrap.srcDir}/blueprint/pathtools/lists.go $
+        ${g.bootstrap.srcDir}/blueprint/pathtools/glob.go | $
         ${g.bootstrap.gcCmd}
     pkgPath = blueprint/pathtools
+default .bootstrap/blueprint-pathtools/pkg/blueprint/pathtools.a
 
 # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # #
 # Module:  blueprint-proptools
@@ -133,9 +138,10 @@ build .bootstrap/blueprint-pathtools/pkg/blueprint/pathtools.a: g.bootstrap.gc $
 # Defined: Blueprints:38:1
 
 build .bootstrap/blueprint-proptools/pkg/blueprint/proptools.a: g.bootstrap.gc $
-        ${g.bootstrap.SrcDir}/blueprint/proptools/proptools.go | $
+        ${g.bootstrap.srcDir}/blueprint/proptools/proptools.go | $
         ${g.bootstrap.gcCmd}
     pkgPath = blueprint/proptools
+default .bootstrap/blueprint-proptools/pkg/blueprint/proptools.a
 
 # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # #
 # Module:  minibp
@@ -144,7 +150,7 @@ build .bootstrap/blueprint-proptools/pkg/blueprint/proptools.a: g.bootstrap.gc $
 # Defined: Blueprints:57:1
 
 build .bootstrap/minibp/obj/minibp.a: g.bootstrap.gc $
-        ${g.bootstrap.SrcDir}/blueprint/bootstrap/minibp/main.go | $
+        ${g.bootstrap.srcDir}/blueprint/bootstrap/minibp/main.go | $
         ${g.bootstrap.gcCmd} $
         .bootstrap/blueprint-parser/pkg/blueprint/parser.a $
         .bootstrap/blueprint-proptools/pkg/blueprint/proptools.a $
@@ -154,12 +160,15 @@ build .bootstrap/minibp/obj/minibp.a: g.bootstrap.gc $
         .bootstrap/blueprint-bootstrap/pkg/blueprint/bootstrap.a
     incFlags = -I .bootstrap/blueprint-parser/pkg -I .bootstrap/blueprint-proptools/pkg -I .bootstrap/blueprint/pkg -I .bootstrap/blueprint-deptools/pkg -I .bootstrap/blueprint-pathtools/pkg -I .bootstrap/blueprint-bootstrap/pkg
     pkgPath = minibp
+default .bootstrap/minibp/obj/minibp.a
 
 build .bootstrap/minibp/obj/a.out: g.bootstrap.link $
         .bootstrap/minibp/obj/minibp.a | ${g.bootstrap.linkCmd}
     libDirFlags = -L .bootstrap/blueprint-parser/pkg -L .bootstrap/blueprint-proptools/pkg -L .bootstrap/blueprint/pkg -L .bootstrap/blueprint-deptools/pkg -L .bootstrap/blueprint-pathtools/pkg -L .bootstrap/blueprint-bootstrap/pkg
+default .bootstrap/minibp/obj/a.out
 
 build .bootstrap/bin/minibp: g.bootstrap.cp .bootstrap/minibp/obj/a.out
+default .bootstrap/bin/minibp
 
 # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # #
 # Singleton: bootstrap
@@ -177,12 +186,16 @@ rule s.bootstrap.minibp
     generator = true
 
 build .bootstrap/main.ninja.in: s.bootstrap.bigbp $
-        ${g.bootstrap.SrcDir}/Blueprints | .bootstrap/bin/minibp
+        ${g.bootstrap.srcDir}/Blueprints | .bootstrap/bin/minibp
+default .bootstrap/main.ninja.in
 build .bootstrap/notAFile: phony
+default .bootstrap/notAFile
 build build.ninja: g.bootstrap.bootstrap .bootstrap/main.ninja.in | $
-        ${g.bootstrap.Bootstrap} .bootstrap/notAFile $
+        ${g.bootstrap.bootstrapCmd} .bootstrap/notAFile $
         .bootstrap/bootstrap.ninja.in
+default build.ninja
 build .bootstrap/bootstrap.ninja.in: s.bootstrap.minibp $
-        ${g.bootstrap.SrcDir}/Blueprints | .bootstrap/bin/minibp
-    checkFile = ${g.bootstrap.BootstrapManifest}
+        ${g.bootstrap.srcDir}/Blueprints | .bootstrap/bin/minibp
+    checkFile = ${g.bootstrap.bootstrapManifest}
+default .bootstrap/bootstrap.ninja.in
 
